# coppercomm

./: .gitignore  .gitreview  LICENSE  Makefile  NOTICE  README.md  ci_config.py  device.py  device_config_gen.py  device_factory.py  example.py  example_config_file_for_dhu.json  example_config_file_for_ihu.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: premerge.yaml  release.yaml
device_adb/: adb_interface.py  device_adb.py
device_common/: exceptions.py  interfaces.py  local_console.py
device_serial/: console.py  device_serial.py  serial_console_interface.py
device_state_monitor/: adb_state_monitor.py  ssh_state_monitor.py
examples/: AndroidTest.xml  test_example_pytest.py
flashing/: flashing_interface.py
loggers/: device_logger.py  device_logging.json
one_update/: one_update_console.py  one_update_exceptions.py  one_update_interfaces.py
one_update/communication/: adb_interface.py  exceptions.py  local_console.py  serial_console_interface.py
pytest_fixtures/: device_fixtures.py
pytest_fixtures/dryrun/: __init__.py
src/coppercomm/: ci_config.py  config_file_parser.py  device.py  device_factory.py  fastboot_interface.py
src/coppercomm/device_adb/: adb_interface.py
src/coppercomm/device_common/: exceptions.py  interfaces.py  local_console.py
src/coppercomm/device_serial/: console.py  device_serial.py  serial_console_interface.py
src/coppercomm/device_state_monitor/: adb_state_monitor.py  ssh_state_monitor.py
src/coppercomm/flashing/: flashing_interface.py
src/coppercomm/loggers/: device_logger.py  device_logging.json  serial_logger.py
src/coppercomm/loggers/adb_logger/: adb_logger.py  adb_logger_thread.py
src/coppercomm/loggers/pytest_fixtures/: log_fixtures.py
src/coppercomm/loggers/utils/: log_dir.py
src/coppercomm/pytest_fixtures/: device_fixtures.py
src/coppercomm/pytest_fixtures/dryrun/: __init__.py
src/coppercomm/ssh_connection/: ssh_connection.py
ssh_connection/: ssh_connection.py
test/: test_device_adb.py  test_local_console.py
tests/: AndroidTest.xml  test_config_file_parser.py  test_device_adb.py  test_device_config_gen.py  test_fastboot_interface.py  test_local_console.py
