[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
pythonpath = [
  "src"
]

[tool.mypy]
python_version = "3.8"
incremental=false
show_column_numbers = true
check_untyped_defs = true
warn_unused_configs = true
ignore_missing_imports = false
no_implicit_optional = true
follow_imports = "normal"
namespace_packages = true
explicit_package_bases = true
mypy_path="$MYPY_CONFIG_FILE_DIR/src"
files = "$MYPY_CONFIG_FILE_DIR/src"

[[tool.mypy.overrides]]
module = "pexpect.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "serial.*"
ignore_missing_imports = true